# memoir

./: .gitignore  README.md  docker-compose.yml  main.go
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/src/: main.py  models.py  schemas.py
api/src/core/: database.py  exception_handlers.py  settings.py
api/src/migrations/: env.py
api/src/migrations/versions/: b1f2c16f192d_init.py
consumer/: Dockerfile  pyproject.toml
consumer/src/: main.py
go_test/: go.mod
k6/: seed-notes-test.js  seed-test.js  seed-users-test.js  simple-test.js  simples-test.js
nginx/: nginx.conf
