[tool.poetry]
name = "consumer"
version = "1.0.0"
description = ""
authors = ["Beto Figueiredo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
pydantic = { extras = ["email"], version = "^2.6.4" }
python-dotenv = "^1.0.1"
pendulum = "^3.0.0"
pandas = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
gunicorn = "^21.2.0"
pika = "^1.3.2"
asyncio = "^3.4.3"
celery = {extras = ["rabbitmq"], version = "^5.3.6"}
aio-pika = "^9.4.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pylint = "^3.1.0"
ruff = "^0.3.4"

[tool.ruff]
ignore-init-module-imports = true
indent-width = 4

[tool.pytest.ini_options]
pythonpath = "src"

[tool.taskipy.tasks]
test = { cmd = "python3 -m pytest -vv", help = "runs all unit tests" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
